--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-Django>=3.0,<4.0
-psycopg2>=2.8
+asgiref==3.6.0
+Django==3.2.17
+gunicorn==20.1.0
+psycopg2==2.9.5
+PyMySQL==1.0.2
+pytz==2022.7.1
+sqlparse==0.4.3
